[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Niklas Hallqvist <niklas@hallqvist.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
closure = "0.3.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
reduce = "0.1.3"
regex = "1.4.2"
simple-error = "0.2"
